--- a/www/forgotPassword.html
+++ b/www/forgotPassword.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <title>Forgot Password Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese"
+    <link
+        href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese"
         rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.min.css">
-    <link rel="stylesheet" href="../css/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
-    <script src="../../node_modules/jquery/dist/jquery.js"></script>
-    <script src="../js/javascript.js"></script>
+    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="js/javascript.js"></script>
 </head>
 
 <body>
